# leptos-language-server

./: README.md  cliff.toml
.github/workflows/: vscode-ci.yml
crates/lsp_server/: Cargo.toml
crates/lsp_server/src/: lib.rs  main.rs
crates/lsp_server/src/capabilities/: document.rs  formatting.rs  mod.rs
crates/lsp_server/src/core/: mod.rs  rsx_document.rs  text_document.rs
editors/vscode/: .gitignore  package-lock.json  package.json
editors/vscode/client/: package-lock.json  package.json
editors/vscode/client/src/: extension.ts
