[package]
name = "leptos-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
log = "0.4.17"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
ropey = "1.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
leptosfmt-formatter = { git = "https://github.com/bram209/leptosfmt" }
syn = "1.0.109"
